# wasmer-bug-repro

./: Cargo.toml  index.html
src/: main.rs
